Navbar component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,9 @@
+<app-navbar></app-navbar>
+
+
 <div class="content-container">
-
-  <!-- navbar -->
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">Jegybazár</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link active" href="index.html">Home</a>
-          <a class="nav-item nav-link" href="esemenyek.html">Események</a>
-          <a class="nav-item nav-link" href="jegyek.html">Jegyek</a>
-          <a class="nav-item nav-link" href="rolunk.html">Rólunk</a>
-          <a class="nav-item nav-link" href="belepes.html">Belépés</a>
-          <a href="regisztracio.html" class="nav-item nav-link btn btn-primary text-light ml-lg-2 btn-sm">Regisztráció</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-  <!-- navbar end -->
-
+  
   <!-- jumbotron -->
-
   <div class="jumbotron py-5">
     <div class="container text-center">
       <h1 class="display-4 mb-4">Jegyek bárkitől, bárhol, bármikor!</h1>
@@ -36,7 +16,6 @@
   </div>
 
   <!-- cards -->
-
   <div class="container">
 
     <div class="card-deck pt-5">
@@ -86,8 +65,8 @@
     </div>
   </div>
 </div>
-<!-- footer -->
 
+<!-- footer -->
 <footer class="bg-light text-center py-3 sticky-bottom">
   <div class="container">
     <p class="m-0">&copy; Company 2017</p>
